--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!--Navbar section Start-->
        <section class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-nav-header ">
-            <img src="images/ICON/Logo.png" alt="logo" width="198px" height="59">
+            <img src="images/ICON/Logo.png" alt="logo" width="198px" height="59px">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
