--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <button class="sign-in-button">Get Started</button>
             </div>
             <div class="header-img-align">
-                <img src="images/Photos/Illustration.png" alt="illus." width="450" height="270">
+                <img src="images/Photos/illustration.png" alt="illus." width="450" height="270">
             </div>
             
         </section>
@@ -65,21 +65,21 @@
                     </div>   
                 </div>
                 <div class="box">
-                    <div><a href="#"><img src="images/ICON/Student.png" alt="student" width="70" height="85"></a></div>
+                    <div><a href="#"><img src="images/ICON/student.png" alt="student" width="70" height="85"></a></div>
                         <div>
                             <H5>1800+Students</H5>
                             <p>Learn anything</p>
                         </div>
                 </div>
                 <div class="box " >
-                    <div><a href="#"><img src="images/ICON/Test.png" alt="test"width="70" height="85"></a></div>
+                    <div><a href="#"><img src="images/ICON/test.png" alt="test"width="70" height="85"></a></div>
                         <div>
                             <H5>9k+Test token</H5>
                             <p>Learn anything</p>
                         </div>
                 </div>
                 <div class="box">
-                    <div><a href="#"><img src="images/ICON/Students.png" alt="students"width="70" height="85"></a></div>
+                    <div><a href="#"><img src="images/ICON/students.png" alt="students"width="70" height="85"></a></div>
                     <div>
                         <H5>2000+Student</H5>
                         <p>Learn anything</p>
@@ -93,7 +93,7 @@
         <section class="container">
             <div class="card-deck">
                 <div class="card">
-                  <img src="images/Photos/Morder pyschology.png" class="card-img-top" alt="...">
+                  <img src="images/Photos/morder pyschology.png" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Morder Psychology</h5>
                     <p class="card-text">Designation</p>
@@ -105,7 +105,7 @@
                   </div>
                 </div>
                 <div class="card">
-                  <img src="images/Photos/Morder psyc.png" class="card-img-top" alt="...">
+                  <img src="images/Photos/morder psyc.png" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Mordern Science</h5>
                     <p class="card-text">Designation</p>
@@ -117,7 +117,7 @@
                   </div>
                 </div>
                 <div class="card">
-                  <img src="images/Photos/Morder pychons.png" class="card-img-top" alt="...">
+                  <img src="images/Photos/morder pychons.png" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Computer Science</h5>
                     <p class="card-text">Designation</p>
@@ -137,7 +137,7 @@
         <h1 style="text-align: center; font-weight: 900; margin-bottom: 100px;">Testimonial</h1>
         <div class="row d-flex justify-content-around">
             <div class="col-3 d-flex justify-content-end">
-                <img src="images/Photos/Man.png" alt="" width="120" height="120">
+                <img src="images/Photos/man.png" alt="" width="120" height="120">
             </div>
             <div class="col-8">
                 <p style="font-size: 18px;">There are many variation of passeges of lorem There are many v <br>
