line sapcing added

--- a/index.html
+++ b/index.html
@@ -64,37 +64,31 @@
                 <div class="col-sm-3">
                     <div class="box">
                         <div> <a href="#"><img src="images/ICON/book.png" alt="book" width="70" height="85"></a></div>
-                            <div><h5>1000+Books</h5>
-                                <p>Learn anything</p>
-                            </div>
-                        
-                        </div>   
+                            <div class="box-text"><h5>1000+Books<br> <span style="font-size: small ;">Learn anything</span></h5>                            </div>
+                       </div>   
                     </div>
                 
                 <div class="col-sm-3">
                     <div class="box">
                         <div><a href="#"><img src="images/ICON/student.png" alt="student" width="70" height="85"></a></div>
                             <div>
-                                <h5>1800+Students</h5>
-                                <p>Learn anything</p>
-                            </div>
+                                <h5 class="box-text">1800+Students <br> <span style="font-size: small ;">Learn anything</span></h5>
+                         </div>
                     </div>
                 </div>
                 <div class="col-sm-3">
                     <div class="box " >
                         <div><a href="#"><img src="images/ICON/test.png" alt="test"width="70" height="85"></a></div>
                             <div>
-                                <h5>9k+Test token</h5>
-                                <p>Learn anything</p>
-                            </div>
+                                <h5 class="box-text">9k+Test token<br> <span style="font-size: small ;">Learn anything</span></h5>
+                        </div>
                     </div>
                 </div>
                 <div class="col-sm-3">
                     <div class="box">
                         <div><a href="#"><img src="images/ICON/students.png" alt="students"width="70" height="85"></a></div>
                         <div>
-                            <h5>2000+Student</h5>
-                            <p>Learn anything</p>
+                            <h5 class="box-text">2000+Student<br> <span style="font-size: small ;">Learn anything</span></h5>
                         </div>
                     </div>
                 </div>
